[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "blog"
version = "0.1.0"
authors = [
    { name = "NxtaSunstrike" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bazario[dishka]>=0.4.1",
    "fastapi>=0.115.7",
    "faststream[rabbit]>=0.5.34",
    "mypy>=1.14.1",
    "sqlalchemy>=2.0.37",
    "taskiq>=0.11.10",
    "taskiq-aio-pika>=0.4.1",
    "uuid7>=0.1.0",
    "uvicorn>=0.34.0",
    "click>=8.1.8",
]

[project.scripts]
blog = "blog.bootstrap.entrypoints.cli:main"
